<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">funwithforms</string>
    <string name="gender_select">I am a...</string>
    <string name="welcome">Hello</string>
    <string name="menu_settings">Settings</string>
    <string name="name_hint">Type your name here</string>
    <string name="submit">Submit!</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_crazy_name">CrazyName</string>
    <string name="male">man</string>
    <string name="female">woman</string>
    <string name="title_activity_form_maze">FormMaze</string>
    <string name="title_activity_binary_stream">BinaryStream</string>
    <string name="title_activity_bouncing_balls">BouncingBalls</string>
    <color name="black">#000000</color>

</resources>